ipc/ipdl/test/ipdl/error/cyclecheck_Parent.ipdl
include protocol cyclecheck_Child;

protocol cyclecheck_Parent {
    manages cyclecheck_Child;

child:
    async cyclecheck_Child();
    async __delete__();
};

